# api/service/openapi.yaml
@@ -66,6 +66,12 @@ paths:
     $ref: paths/projects.yaml
   /projects/{id}:
     $ref: paths/projects_{id}.yaml
+  /projects/{id}/dashboard:
+    $ref: paths/projects_{id}_dashboard.yaml
+  /projects/{id}/view-duration:
+    $ref: paths/projects_{id}_view-duration.yaml
+  /projects/{id}/viewers:
+    $ref: paths/projects_{id}_viewers.yaml
   /projects/my:
     $ref: paths/projects_my.yaml
   /projects/{id}/applications:
